fix: Fix Pill extra spacing.

--- a/apps/website/src/components/TabPillSwitch/TabPillSwitch.module.scss
+++ b/apps/website/src/components/TabPillSwitch/TabPillSwitch.module.scss
@@ -4,6 +4,7 @@
   background-color: #19171e;
   padding: 4px;
   border-radius: 50px;
+  width: fit-content;
 }
 
 .tabButton {
